ignore spec route documentation
